--- a/include/portfolio.html
+++ b/include/portfolio.html
@@ -21,7 +21,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="28n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/28n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.youmagine.com/designs/dark-knight">Dark Knight</a></h4>
                 <p>D&D</p>
@@ -35,7 +35,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="27n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/27n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/thing:1559735">Yeenoghu</a></h4>
                 <p>D&D</p>
@@ -49,7 +49,7 @@
 		  
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-others">
             <div class="portfolio-wrap">
-              <img src="26n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/26n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/#">20fedora WIP</a></h4>
                 <p>Others</p>
@@ -63,7 +63,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-others">
             <div class="portfolio-wrap">
-              <img src="25n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/25n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/thing:2573620">Meeseeks Box</a></h4>
                 <p>Others</p>
@@ -77,7 +77,7 @@
 		  
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-anime">
             <div class="portfolio-wrap">
-              <img src="24n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/24n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/thing:2030296">Black Goku</a></h4>
                 <p>Anime</p>
@@ -91,7 +91,7 @@
 		  
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="19n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/19n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/">Necromancer</a></h4>
                 <p>D&D</p>
@@ -105,7 +105,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="20n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/20n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/">Skeleton</a></h4>
                 <p>D&D</p>
@@ -119,7 +119,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="21n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/21n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/">Skeleton</a></h4>
                 <p>D&D</p>
@@ -133,7 +133,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="22n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/22n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/">Skeleton</a></h4>
                 <p>D&D</p>
@@ -147,7 +147,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="23n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/23n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/">Skeleton</a></h4>
                 <p>D&D</p>
@@ -161,7 +161,7 @@
 		  
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-others">
             <div class="portfolio-wrap">
-              <img src="18n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/18n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/thing:1913982">Christmas Tree</a></h4>
                 <p>Others</p>
@@ -175,7 +175,7 @@
 		  
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="1n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/1n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/thing:2831227">Brass Dragon Adult</a></h4>
                 <p>D&D</p>
@@ -189,7 +189,7 @@
 		  
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-others">
             <div class="portfolio-wrap">
-              <img src="2n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/2n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/thing:2449436">Darth Vader Pen Holder</a></h4>
                 <p>Others</p>
@@ -203,7 +203,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="17n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/17n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:3615139">Dagger Venom</a></h4>
                 <p>D&D</p>
@@ -217,7 +217,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-others">
             <div class="portfolio-wrap">
-              <img src="16n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/16n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:3129886">Pumpkin Spider</a></h4>
                 <p>Others</p>
@@ -231,7 +231,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-games">
             <div class="portfolio-wrap">
-              <img src="15n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/15n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:3765997">Spiro Control Holder</a></h4>
                 <p>Games</p>
@@ -245,7 +245,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-anime">
             <div class="portfolio-wrap">
-              <img src="14n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/14n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/make:698576">Steins;gate" Upa</a></h4>
                 <p>Anime</p>
@@ -259,7 +259,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-others">
             <div class="portfolio-wrap">
-              <img src="13n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/13n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:1005481">MR Owl log</a></h4>
                 <p>Others</p>
@@ -273,7 +273,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-anime">
             <div class="portfolio-wrap">
-              <img src="12n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/12n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:2123706">Dragonball Cat</a></h4>
                 <p>Anime</p>
@@ -287,7 +287,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="11n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/11n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:3283029">Garble!(Kobold)</a></h4>
                 <p>D&D</p>
@@ -301,7 +301,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-others" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
-              <img src="10n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/10n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:3743813">DingDing</a></h4>
                 <p>Others</p>
@@ -315,7 +315,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-others" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="9n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/9n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:3958217">Hook</a></h4>
                 <p>Others</p>
@@ -329,7 +329,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-games">
             <div class="portfolio-wrap">
-              <img src="8n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/8n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:3857687">Godseeker</a></h4>
                 <p>Games</p>
@@ -343,7 +343,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-anime filter-games" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
-              <img src="7n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/7n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/thing:205699">Geodude</a></h4>
                 <p>Anime/Games</p>
@@ -357,7 +357,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-anime" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="6n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/6n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:2523025">Evangelion 01</a></h4>
                 <p>Anime</p>
@@ -371,7 +371,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="5n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/5n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:2879444">Cthulhu dice tower</a></h4>
                 <p>D&D</p>
@@ -385,7 +385,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
-              <img src="3n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/3n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:3719035">Beholder</a></h4>
                 <p>D&D</p>
@@ -399,7 +399,7 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-games" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="4n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/4n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="img/gifs/http://thingiverse.com/thing:1789814">Chocobo</a></h4>
                 <p>Games</p>
