--- a/include/intro.html
+++ b/include/intro.html
@@ -25,5 +25,10 @@
       </div>
 
     
-	
+	<script src="js/three.js/build/three.min.js"></script>
+    <script src="js/three.js/examples/js/WebGL.js"></script>
+    <script src="js/three.js/examples/js/loaders/STLLoader.js"></script>
+    <script src="js/three.js/examples/js/controls/OrbitControls.js"></script>
+	<script src="js/stl.js"></script>
+	<script src="js/stlviewer.js"></script>	
  <!-- </section>-->
