--- a/include/portfolio.html
+++ b/include/portfolio.html
@@ -3,6 +3,10 @@
 
         <header class="section-header">
           <h3 class="section-title">Our Gallery</h3>
+          <p>
+            Actualy it is the prints that we have printed<br>
+            Hover the gif to see the real image, source file, actual source(if not original) or a better view
+          </p>
         </header>
 
         <div class="row">
