--- a/include/portfolio.html
+++ b/include/portfolio.html
@@ -40,6 +40,7 @@
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
               <img src="img/gifs/27n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/24n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/thing:1559735">Yeenoghu</a></h4>
                 <p>D&D</p>
