--- a/include/intro.html
+++ b/include/intro.html
@@ -32,3 +32,13 @@
 	<script src="js/stl.js"></script>
 	<script src="js/stlviewer.js"></script>	
  <!-- </section>-->
+ <script type=text/javascript> 
+    	window.onload=function() {
+    		STLViewerEnable("stlviewer");
+    		var particles = Particles.init({
+    			selector: '.backgrounds',
+    		  color: ['#f20f20', '#404B69', '#DBEDF3'],
+    		  connectParticles: true
+    		});
+    	 } 
+        </script>
