--- a/include/portfolio.html
+++ b/include/portfolio.html
@@ -1,4 +1,4 @@
-<section id="portfolio" class="clearfix">
+<!--<section id="portfolio" class="clearfix">-->
       <div class="container">
 
         <header class="section-header">
@@ -26,6 +26,7 @@
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
               <img src="img/gifs/28n.gif" class="img-fluid" alt="">
+              <img src="img/gifs/24n.gif" class="img-fluid2" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.youmagine.com/designs/dark-knight">Dark Knight</a></h4>
                 <p>D&D</p>
@@ -419,4 +420,4 @@
         </div>
 
       </div>
-    </section><!-- #portfolio -->
+  <!--  </section><!-- #portfolio -->
