--- a/include/portfolio.html
+++ b/include/portfolio.html
@@ -25,14 +25,15 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="img/gifs/28n.gif" class="img-fluid" alt="">
-              <img src="img/gifs/24n.gif" class="img-fluid2" alt="">
+              <img src="img/gifs/28n.gif" class="img-fluid2" alt="">
+              <img src="img/gifs/24n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.youmagine.com/designs/dark-knight">Dark Knight</a></h4>
                 <p>D&D</p>
                 <div>
                   <a href="img/gifs/28n.gif" data-lightbox="portfolio" data-title="web 3" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
                   <a target="_blank"  href="img/gifs/#" class="link-details" title="Module Url"><i class="ion ion-android-open"></i></a>
+                  <a href="img/gifs/#" class="link-details" title="Module Url"><i class="ion ion-android-arrow-down"></i></a>
                 </div>
               </div>
             </div>
@@ -40,13 +41,14 @@
 
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
-              <img src="img/gifs/27n.gif" class="img-fluid" alt="">
-              <img src="img/gifs/24n.gif" class="img-fluid2" alt="">
+              <img src="img/gifs/27n.gif" class="img-fluid2" alt="">
+              <img src="img/gifs/24n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a target="_blank" href="https://www.thingiverse.com/thing:1559735">Yeenoghu</a></h4>
                 <p>D&D</p>
                 <div>
                   <a href="img/gifs/27n.gif" data-lightbox="portfolio" data-title="web 3" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a target="_blank"  href="img/gifs/#" class="link-details" title="Module Url"><i class="ion ion-android-open"></i></a>
                   <a target="_blank"  href="img/gifs/#" class="link-details" title="Module Url"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
