--- a/include/contact.html
+++ b/include/contact.html
@@ -17,6 +17,7 @@
               <div class="col-md-12 info">
                 <i class="ion-ios-location-outline"></i>
                 <p>123 fake street lisbon, Portugal</p>
+                <p>Next to the river of unknown knowledge</p>
               </div>
               <div class="col-md-6 info">
                 <i class="ion-ios-email-outline"></i>
