--- a/include/contact.html
+++ b/include/contact.html
@@ -16,8 +16,8 @@
             <div class="row">
               <div class="col-md-12 info">
                 <i class="ion-ios-location-outline"></i>
-                <p>123 fake street lisbon, Portugal</p>
-                <p>Next to the river of unknown knowledge</p>
+                <p>123 fake street lisbon, Portugal <p>(Next to the river of unknown knowledge)</p></p>
+                
               </div>
               <div class="col-md-6 info">
                 <i class="ion-ios-email-outline"></i>
