--- a/include/contact.html
+++ b/include/contact.html
@@ -16,7 +16,7 @@
             <div class="row">
               <div class="col-md-12 info">
                 <i class="ion-ios-location-outline"></i>
-                <p>123 fake street lisbon, Portugal <div style="font-size: 8px;">(Next to the river of unknown knowledge)</div></p>
+                <p>123 fake street lisbon, Portugal <b style="font-size: 8px;">(Next to the river of unknown knowledge)</b></p>
                 
               </div>
               <div class="col-md-6 info">
